--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ server/key copy.dat
 client/requesthandlers.test.py
 client/__pycache__/requesthandlers.cpython-39.pyc
 Tycoon.code-workspace
+client/__pycache__
+server/__pycache__
