Added Save Data Handlers and Username Handlers

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ client/__pycache__/requesthandlers.cpython-39.pyc
 Tycoon.code-workspace
 client/__pycache__
 server/__pycache__
+Tycoon-workspace.code-workspace
