--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ Tycoon.code-workspace
 client/__pycache__
 server/__pycache__
 Tycoon-workspace.code-workspace
+client/uielements/__pycache__/
+client/uielements/__pycache__/textboxes.cpython-39.pyc
