--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ server/__pycache__
 Tycoon-workspace.code-workspace
 client/uielements/__pycache__/
 client/uielements/__pycache__/textboxes.cpython-39.pyc
+key.dat
