Ignoring ui files

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ client/uielements/__pycache__/textboxes.cpython-39.pyc
 key.dat
 client/modules/uielements/__pycache__/textboxes.cpython-39.pyc
 server/runserver.cmd
+client/ui
