--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ key.dat
 client/modules/uielements/__pycache__/textboxes.cpython-39.pyc
 server/runserver.cmd
 client/ui
+Tycoon Docs/.obsidian/app.json
+Tycoon Docs/.obsidian/appearance.json
+Tycoon Docs/.obsidian/core-plugins.json
+Tycoon Docs/.obsidian/hotkeys.json
+Tycoon Docs/.obsidian/workspace
