--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ Tycoon Docs/.obsidian/appearance.json
 Tycoon Docs/.obsidian/core-plugins.json
 Tycoon Docs/.obsidian/hotkeys.json
 Tycoon Docs/.obsidian/workspace
+client/modules/datahandlers/__pycache__/backendhandler.cpython-39.pyc
+client/modules/datahandlers/__pycache__/datahandler.cpython-39.pyc
+client/modules/datahandlers/__pycache__/requesthandler.cpython-39.pyc
+client/modules/datahandlers/__pycache__/usernamehandler.cpython-39.pyc
