--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ server/mainserver.log
 client/main.log
 client/username.dat.bak
 debugsave/debugsave.py
+client/modules/helpers/__pycache__/convert_to_dictionary.cpython-39.pyc
+debugsave/converttodictionaryhelper.log
