--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 windows-curses
-cryptography
-fastapi
-uvicorn
-flask
-requests
+cryptography~=37.0.4
+fastapi~=0.79.0
+uvicorn~=0.18.2
+flask~=2.1.3
+requests~=2.28.1
