Ignoring more cache

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ client/modules/userinterfaces/__pycache__/
 client/playgroundmain.py
 client/playground.py
 client/modules/__pycache__/
+client/modules/helpers/__pycache__/
+.gitignore
+.gitignore
