--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ client/server.log
 dev/server.log
 client/modules/uielements/__pycache__/
 client/modules/uielements/__pycache__/
+client/modules/uielements/__pycache__/textboxes.cpython-310.pyc
