Just ignore god dammit!

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ dev/server.log
 client/modules/uielements/__pycache__/
 client/modules/uielements/__pycache__/
 client/modules/uielements/__pycache__/textboxes.cpython-310.pyc
+client/modules/uielements/__pycache__/textboxes.cpython-310.pyc
