--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ client/modules/uielements/__pycache__/
 client/modules/uielements/__pycache__/
 client/modules/uielements/__pycache__/textboxes.cpython-310.pyc
 client/modules/uielements/__pycache__/textboxes.cpython-310.pyc
+client/web/node_modules
+client/web/bun.lockb
